...
    <string name="msg_file_tree_drag_file_not_found">File not found</string>
    <string name="msg_file_tree_drag_not_a_file">Only files can be dragged</string>

	<!-- Templates -->
	<string name="msg_confirm_project_close">When you close the project, all build tasks will be stopped and unsaved changes to your project file may be lost. Do you want to save the files before you close the project?</string>
	<string name="template_basic">Basic Activity</string>
	<string name="template_empty">Empty Activity</string>
	<string name="template_navigation_drawer">Navigation Drawer Activity</string>
	<string name="template_compose" translatable="false">Compose Activity</string>
	<string name="template_navigation_tabs">Bottom Nav Activity</string>
	<string name="template_tabs">Tabbed Activity</string>
	<string name="template_no_activity">No Activity</string>
	<string name="template_no_AndroidX">Legacy Project (No AndroidX)</string>
...
	<string name="previous">Previous</string>
	<string name="title_gradle_service_notification_ticker">Gradle build service started</string>
	<string name="title_gradle_service_notification">Gradle build service</string>
	<string name="title_cancel_build">Cancel build</string>
	<string name="msg_initializing_project">Initializing project</string>
	<string name="msg_project_initialized">Project initialized</string>
	<string name="msg_project_initialization_failed_with_name">Project initialization failed for %1$s</string>
	<string name="msg_project_initialization_failed">Project initialization failed</string>
	<string name="msg_project_not_initialized">Project is not initialized</string>
	<string name="msg_replacement">Replacement</string>
	<string name="title_sync_project">Sync project</string>
	<string name="wizard_save_location">Save location</string>
	<string name="wizard_language">Project language</string>
...
	<string name="tooltip_filter_output">Filter output</string>
	<string name="msg_emptyview_buildoutput">"Build the application or run a task to see its build output here. "</string>
	<string name="msg_codeaction_failed">Failed to perform code action</string>
	<string name="idepref_devOptions_enableLogsender_title">Enable LogSender</string>
	<string name="idepref_devOptions_enableLogsender_summary">When disabled, logs from applications won\'t be shown in Code on the Go</string>
	<string name="title_build_variants">Build variants</string>
	<string name="title_agent">Agent</string>
	<string name="build_variants_apply">Apply</string>
	<string name="build_variants_cancel">Cancel</string>
	<string name="msg_build_variants_fetch_failed">Failed to fetch build variants</string>
	<string name="title_choose_application">Choose application</string>
	<string name="err_selected_variant_not_found">Selected build variant not found</string>
	<string name="err_no_release_variant">No release build variant found for module \'%1$s\'. Profiling requires a release variant.</string>
...
