...
    android:id="@+id/realContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/editor_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="false"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">

...
        android:scaleType="fitCenter"
        android:src="@drawable/ic_fullscreen"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/desc_enter_fullscreen" />

    <org.appdevforall.codeonthego.ui.EditorBottomSheet
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_hideable="false"
        app:behavior_peekHeight="@dimen/editor_sheet_collapsed_height"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" />

...
