...
            app:tint="?attr/colorOnSurfaceVariant"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <TextView
        android:id="@+id/message_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="8dp"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textIsSelectable="true"
...
